--- a/postcube.cz/src/stylesheets/jak-box-funguje.scss
+++ b/postcube.cz/src/stylesheets/jak-box-funguje.scss
@@ -7,7 +7,7 @@ hr {
   background-color: var(--postcube-grey-lighter);
   border: none;
   height: 2px;
-  margin: 3em 0 4em;
+  margin: 3em 0 2em;
 }
 
 header {
@@ -16,6 +16,7 @@ header {
 
 .main-info {
   background-color: var(--postcube-grey-light);
+  padding-bottom: 4em;
   .main-info__list {
     ul {
       display: flex;
@@ -50,7 +51,11 @@ header {
 }
 
 .how-pc-works {
-  .how-pc-works__title p {
+  margin-bottom: 10em;
+  .steps {
+    margin: 1em 0 1.5em;
+  }
+  p.how-pc-works__subtitle {
     font-size: 24px;
   }
 
