PostCube - Jak Box Funguje - přidání FAQ na stránku

--- a/postcube.cz/src/stylesheets/jak-box-funguje.scss
+++ b/postcube.cz/src/stylesheets/jak-box-funguje.scss
@@ -72,7 +72,7 @@ header {
   margin-bottom: 10em;
 
   .steps {
-    margin: 1em 0 1.5em;
+    padding: 3em 0;
 
     p.steps__subtitle {
       font-size: 24px;
