--- a/postcube.cz/src/stylesheets/typography.scss
+++ b/postcube.cz/src/stylesheets/typography.scss
@@ -121,7 +121,7 @@ button.content-btn {
 }
 
 .action-link {
-  margin: 2em 0;
+  padding: 2em 0;
   a {
     font-size: 24px;
     text-decoration: none;
