PostCube - PostCube na telefonech - obrázek

--- a/postcube.cz/src/html/components/get-app.njk
+++ b/postcube.cz/src/html/components/get-app.njk
@@ -1,4 +1,4 @@
-{% set getApp = images["iphone_bg.png"]["public_id"] %}
+{% set getApp = images["pc-phones.png"]["public_id"] %}
 
 <link rel="stylesheet" href="/assets/css/components/get-app.css">
 <section class="get-app mdc-layout-grid">
@@ -23,7 +23,7 @@
       </div>
     </div>
     <div class="get-app__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-5-desktop">
-      <img alt="Fotografie iPhonů" src="{{ getApp | cloudinaryUrl(dpr="auto", width=580) }}">
+      <img alt="Postcube jako mobilní aplikace" src="{{ getApp | cloudinaryUrl(dpr="auto", width=540) }}">
     </div>
   </div>
 </section>
