--- a/postcube.cz/src/html/o-nas/index.njk
+++ b/postcube.cz/src/html/o-nas/index.njk
@@ -115,7 +115,7 @@
                 <div property="address" typeof="PostalAddress"><span
                     property="streetAddress">Struhařovská 2931/9</span><br>
                   <span property="addressLocality">Praha 4, 141 00</span><br>
-                  <a href="https://goo.gl/maps/SBK1BRsmgu22" class="button" data-marker="praha" target="_blank">mapa</a>
+                  <a href="https://goo.gl/maps/SBK1BRsmgu22" class="button" data-marker="praha" target="_blank" rel="noopener">mapa</a>
                   <div property="geo" typeof="GeoCoordinates">
                     <meta property="latitude" content="50.045386">
                     <meta property="longitude" content="14.491246">
@@ -149,9 +149,9 @@
           </div>
         </div>
       </div>
-        <a href="https://goo.gl/maps/SBK1BRsmgu22" class="map" title="Show Prague Office on map"  target="_blank">
+        <a href="https://goo.gl/maps/SBK1BRsmgu22" class="map" title="Show Prague Office on map"  target="_blank" rel="noopener">
           <img  alt="[mapa] Praha Spořilov"
-                src="{{ contactMap | cloudinaryUrl(dpr="auto", width=860) }}" width="860" height="581">
+                src="{{ contactMap | cloudinaryUrl(dpr="auto", width=1296) }}" width="860" height="581">
         </a>
     </div>
   </section>
