--- a/postcube.cz/src/html/jak-box-funguje/index.njk
+++ b/postcube.cz/src/html/jak-box-funguje/index.njk
@@ -210,13 +210,13 @@
               <div
                 class="btn-android mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
                 <button class="mdc-button content-btn" type="button">
-                  <a href="#" class="mdc-button__label">Stáhnout pro Android</a>
+                  <a href="https://app.postcube.cz/" class="mdc-button__label" target="_blank" rel="noopener">Stáhnout pro Android</a>
                 </button>
               </div>
               <div
                 class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
                 <button class="mdc-button content-btn" type="button">
-                  <a href="#" class="mdc-button__label">Stáhnout pro iPhone</a>
+                  <a href="#" class="mdc-button__label" target="_blank" rel="noopener">Stáhnout pro iPhone</a>
                 </button>
               </div>
             </div>
