--- a/postcube.cz/src/html/prepravci/index.njk
+++ b/postcube.cz/src/html/prepravci/index.njk
@@ -215,7 +215,7 @@
           vyzvednutou, přijde zákazníkovi upozornění do jeho mobilní aplikace.</p>
       </div>
       <div class="transport__link mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a href="#" class="">Další podrobnosti o&nbsp;schránce PostCube</a>
+        <a href="/jak-box-funguje" class="">Další podrobnosti o&nbsp;schránce PostCube</a>
       </div>
     </div>
   </section>
