--- a/postcube.cz/src/html/components/create-pc.njk
+++ b/postcube.cz/src/html/components/create-pc.njk
@@ -34,7 +34,7 @@
         <h2>Sestavte si svou PostCube a zjistěte její cenu</h2>
       </div>
       <div class="action-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a href="#" class="action-btn__label">Sestavit PostCube</a>
+        <a href="/jak-box-funguje" class="action-btn__label">Sestavit PostCube</a>
       </div>
     </div>
   </div>
