--- a/postcube.cz/src/html/components/how-it-works.njk
+++ b/postcube.cz/src/html/components/how-it-works.njk
@@ -1,4 +1,4 @@
-<section class="how-it-works icon-section mdc-layout-grid">
+<section id="how-it-works" class="how-it-works icon-section mdc-layout-grid">
   <div class="mdc-layout-grid__inner layout-wrapper">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <h2>A takhle jednoduché to je</h2>
