--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -166,7 +166,7 @@
           k&nbsp;internetu, klíč ani si pamatovat PIN&nbsp;kód.</p>
       </div>
       <div class="action-link mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a href="#">Jak schránka PostCube funguje?</a>
+        <a href="#how-it-works">Jak schránka PostCube funguje?</a>
       </div>
       <div class="action-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <a href="/konfigurator" class="action-btn__label">Objednat PostCube</a>
