--- a/postcube.cz/src/stylesheets/components/header.scss
+++ b/postcube.cz/src/stylesheets/components/header.scss
@@ -106,6 +106,7 @@ header {
         color: var(--postcube-secondary);
       }
     }
+
     @media screen and (min-width: 840px) {
       float: left;
       overflow: hidden;
@@ -123,9 +124,66 @@ header {
   }
 }
 
-.logo__hp {
-  display: none;
+.app-bar--sticky {
+  background-color: var(--postcube-white);
+  box-shadow: 2px 4px 10px rgb(92 95 212 / 10%);
 }
+
+.app-bar {
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  z-index: 1000;
+
+}
+
+// Animation //
+// Fade In Logo //
+@media screen and (min-width: 1024px) {
+  @-webkit-keyframes fadeInDown {
+    0% {
+      opacity: 0;
+      -webkit-transform: translateY(-20px);
+    }
+    100% {
+      opacity: 1;
+      -webkit-transform: translateY(0);
+    }
+  }
+
+  @keyframes fadeInDown {
+    0% {
+      opacity: 0;
+      transform: translateY(-300px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(-150px);
+    }
+  }
+
+  .fadeInDown {
+    -webkit-animation-name: fadeInDown;
+    animation-name: fadeInDown;
+  }
+  .app-bar__logo {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    animation-play-state: unset;
+  }
+  // Logo FadeOut //
+  #logo--blue {
+    position: fixed;
+    top: 0;
+    left: -115px;
+    width: 100%;
+    display: block;
+    transition: top 0.6s;
+  }
+}
+
 
 .logo__subpage {
   font-size: 28px;
@@ -135,17 +193,17 @@ header {
 }
 
 // HAMBURGER
-
 .logo__hp {
   position: absolute;
-  left: 0;
+  left: -40%;
   top: -110%;
+  z-index: 1;
   @media screen and (max-width: 839px) {
-    top: 14%;
-    left: 4%;
+    left: -10%;
+    top: -55%;
     svg {
-      height: 65px;
-      width: 65px;
+      height: 120px;
+      width: 120px;
     }
 
     .logo--phone {
@@ -176,6 +234,7 @@ header {
     height: 70px;
   }
 }
+
 .hamburger-logo {
   position: absolute;
   top: 20px;
