--- a/postcube.cz/src/stylesheets/components/header.scss
+++ b/postcube.cz/src/stylesheets/components/header.scss
@@ -124,11 +124,6 @@ header {
   }
 }
 
-.app-bar--sticky {
-  background-color: var(--postcube-white);
-  box-shadow: 2px 4px 10px rgb(92 95 212 / 10%);
-}
-
 .app-bar {
   position: fixed;
   top: 0;
@@ -165,6 +160,7 @@ header {
   .fadeInDown {
     -webkit-animation-name: fadeInDown;
     animation-name: fadeInDown;
+    animation-iteration-count: 1;
   }
   .app-bar__logo {
     -webkit-animation-duration: 1s;
@@ -172,8 +168,8 @@ header {
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
     animation-play-state: unset;
+    animation-iteration-count: 1;
   }
-  // Logo FadeOut //
   #logo--blue {
     position: fixed;
     top: 0;
@@ -181,7 +177,25 @@ header {
     width: 100%;
     display: block;
     transition: top 0.6s;
+    animation-iteration-count: 1;
   }
+  .logo--scroll {
+    background-image: cloudinaryUrl("/postcube.cz/logo--scroll.svg");
+    background-repeat: no-repeat;
+    background-position: 7%;
+    background-size: 65px 65px;
+  }
+}
+@media (max-width: 839px) {
+  #logo--blue {
+    position: absolute;
+    top: -60%!important;
+  }
+}
+
+.app-bar--sticky {
+  background-color: var(--postcube-white);
+  box-shadow: 2px 4px 10px rgb(92 95 212 / 10%);
 }
 
 
@@ -202,8 +216,8 @@ header {
     left: -10%;
     top: -55%;
     svg {
-      height: 120px;
-      width: 120px;
+      height: 100px;
+      width: 100px;
     }
 
     .logo--phone {
