PostCube - Header Animation

--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -1,4 +1,4 @@
-{% extends 'layouts/main.njk' %}
+{% extends 'layouts/homepage.njk' %}
 {% set language = cs %}
 {% set deliveryman = images["deliveryman.png"]["public_id"] %}
 
