--- a/postcube.cz/src/stylesheets/jak-box-funguje.scss
+++ b/postcube.cz/src/stylesheets/jak-box-funguje.scss
@@ -16,7 +16,7 @@ header {
 
 .main-info {
   background-color: var(--postcube-grey-light);
-  padding-bottom: 4em;
+  padding: 8em 0 5em;
 
   .main-info__list {
     li {
