--- a/postcube.cz/src/html/o-nas/index.njk
+++ b/postcube.cz/src/html/o-nas/index.njk
@@ -3,7 +3,7 @@
 {% set contactMap = images["contact-map.png"]["public_id"] %}
 {% set teamSlavicek = images["jan-slavicek.png"]["public_id"] %}
 {% set teamTopmonks = images["TopMonks.png"]["public_id"] %}
-{% set teamLakum = images["Lakum.png"]["public_id"] %}
+{% set teamLakum = images["logo-lakum.png"]["public_id"] %}
 
 
 {% block title %}
@@ -25,6 +25,9 @@
 
     h1 {
       margin: 0 0 1em;
+    }
+    .main-info {
+      padding-top: 10em;
     }
 
     .main-info__content--location {
@@ -66,7 +69,7 @@
         width: 45%;
         height: auto;
         position: absolute;
-        top: 5%;
+        top: 25%;
         right: 0;
       }
     }
@@ -76,7 +79,7 @@
         width: 420px;
         height: auto;
         position: absolute;
-        top: 8%;
+        top: 25%;
         right: 0;
       }
     }
