--- a/postcube.cz/src/html/domacnosti/index.njk
+++ b/postcube.cz/src/html/domacnosti/index.njk
@@ -1,8 +1,9 @@
 {% extends 'layouts/main.njk' %}
 {% set language = cs %}
-{% set postcubeBox = images["section-bg01.png"]["public_id"] %}
+{% set domacnostiPC = images["domacnosti-bg01.png"]["public_id"] %}
 
-
+{% set domacnostiBG01 = images["domacnosti-bg02.png"]["public_id"] %}
+{% set domacnostiBG02 = images["hp-bg01.png"]["public_id"] %}
 
 {% block title %}
   PostCube - Domácnosti
@@ -46,7 +47,7 @@
     @media screen and (min-width: 840px) {
       .main-info {
         align-self: center;
-        background-image: url({{ postcubeBox | cloudinaryUrl(dpr="auto", width=1020) }});
+        background-image: url({{ domacnostiPC | cloudinaryUrl(dpr="auto", width=1020) }});
         background-size: 45% auto;
         background-position: center right;
         background-repeat: no-repeat;
@@ -65,7 +66,7 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner layout-wrapper">
         <div class="main-info__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-          <img alt="Fotka PostCube" src="{{ postcubeBox | cloudinaryUrl(dpr="auto", width=860) }}">
+          <img alt="Fotka PostCube" src="{{ domacnostiPC | cloudinaryUrl(dpr="auto", width=860) }}">
         </div>
         <div class="main-info__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
           <h1>PostCube k&nbsp;rodinnému domu</h1>
@@ -115,6 +116,11 @@
     </div>
   </section>
   {% include 'components/guarantee.njk' %}
+  <div class="guarantee__bg">
+    <img alt="Fotografie PostCube u domu" src="{{ domacnostiBG01 | cloudinaryUrl(dpr="auto", width=860) }}">
+    <img alt="Fotografie PostCube ve vašem domě" src="{{ domacnostiBG02 | cloudinaryUrl(dpr="auto", width=860) }}">
+  </div>
+
 
   <section class="testimonial mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
