--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -1,4 +1,4 @@
-{% extends 'layouts/homepage.njk' %}
+{% extends 'layouts/main.njk' %}
 {% set language = cs %}
 {% set deliveryman = images["deliveryman.png"]["public_id"] %}
 {% set hpBg01 = images["hp-bg01.png"]["public_id"] %}
@@ -42,7 +42,6 @@
       }
 
       .main-info__bg {
-        margin-top: 2em;
         align-self: center;
       }
     }
@@ -54,7 +53,7 @@
         background-size: 45% auto;
         background-position: center left;
         background-repeat: no-repeat;
-        margin-top: 4em;
+        margin-top: 6em;
       }
 
       .main-info img {
@@ -71,7 +70,7 @@
         background-position: center left;
         background-repeat: no-repeat;
         min-height: 600px;
-        margin-top: 4em;
+        margin-top: 8em;
       }
 
       .main-info__bg img {
