--- a/postcube.cz/src/html/konfigurator/index.njk
+++ b/postcube.cz/src/html/konfigurator/index.njk
@@ -16,6 +16,7 @@
       font-size: 2rem;
       margin: 0;
     }
+
     form h2 {
       font-size: 1.2rem;
       margin-top: 24px;
@@ -82,10 +83,12 @@
       text-align: center;
       padding: 8px;
     }
+
     .main-product-option > strong {
       display: block;
       font-size: 1.2rem;
     }
+
     .main-product-option > span {
       font-weight: normal;
     }
@@ -169,6 +172,17 @@
       font-size: 1.2rem;
       margin: 0;
     }
+
+    @media (max-width: 839px) {
+      #configuration-form {
+        padding: 0 0 6em;
+      }
+    }
+    @media (min-width: 840px) {
+      #configuration-form {
+        padding: 4.5em 0 6em;
+      }
+    }
   </style>
 
 {% endblock %}
@@ -185,7 +199,8 @@
             <div class="select-container">
               {% for item in configurator.sizes %}
                 <label class="main-info__radio-container">
-                  <input type="radio" class="input-radio" name="size" value="{{ item.value }}" {{ "checked" if item.default }}/>
+                  <input type="radio" class="input-radio" name="size"
+                         value="{{ item.value }}" {{ "checked" if item.default }}/>
                   <div class="input-radio--custom">
                     <div class="main-product-option">
                       <strong>{{ item.label }}</strong>
@@ -212,7 +227,8 @@
               <div class="select-container">
                 {% for option in item.options %}
                   <label class="main-info__radio-container">
-                    <input type="radio" class="input-radio" name="{{ item.name }}" value="{{ option.value }}" {{ "checked" if option.default }}/>
+                    <input type="radio" class="input-radio" name="{{ item.name }}"
+                           value="{{ option.value }}" {{ "checked" if option.default }}/>
                     <div class="input-radio--custom">{{ option.label }}</div>
                   </label>
                 {% endfor %}
