PostCube - Contact číslo

--- a/postcube.cz/src/html/o-nas/index.njk
+++ b/postcube.cz/src/html/o-nas/index.njk
@@ -147,7 +147,7 @@
             </div>
             <div
               class="main-info__content--phone mdc-layout-grid__cell mdc-layout-grid__cell--span-3-phone mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-11-desktop">
-              <a property="telephone" href="tel:+420732364404">+420&nbsp;732&nbsp;364&nbsp;404</a>
+              <a property="telephone" href="tel:+420777955699">+420&nbsp;777 955 699</a>
             </div>
           </div>
         </div>
