--- a/postcube.cz/src/html/components/hp-header.njk
+++ b/postcube.cz/src/html/components/hp-header.njk
@@ -1,8 +1,7 @@
 <header class="app-bar app-bar--sticky">
   <div class="mdc-layout-grid layout-wrapper">
     <div class="mdc-layout-grid__inner">
-      <div
-        class="app-bar__logo fadeInDown mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-3-desktop">
+      <div class="app-bar__logo fadeInDown mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-3-desktop">
         <a id="logo--blue" class="logo logo__hp logo--desktop" href="/" title="Go to homepage">
           <svg xmlns="http://www.w3.org/2000/svg" width="286.628" height="286.626" viewBox="0 0 286.628 286.626">
             <defs>
