--- a/postcube.cz/src/html/components/header.njk
+++ b/postcube.cz/src/html/components/header.njk
@@ -2,7 +2,7 @@
   <div class="mdc-layout-grid layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="app-bar__logo fadeOut mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-3-desktop">
-        <a id="logo--text" class="logo logo__hp logo--desktop" href="/" title="Go to homepage">
+        <a id="logo--text" class="logo  logo--desktop" href="/" title="Go to homepage">
           PostCube
         </a>
       </div>
