--- a/postcube.cz/src/html/components/hp-header.njk
+++ b/postcube.cz/src/html/components/hp-header.njk
@@ -47,6 +47,47 @@
             </g>
           </svg>
         </a>
+        <a  class=" logo__hp--scroll" href="/" title="Go to homepage">
+          <svg height="42px" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+              viewBox="0 0 135 25" style="enable-background:new 0 0 135 25;" xml:space="preserve">
+            <style type="text/css">
+              .st0{clip-path:url(#SVGID_2_);}
+              .st1{fill-rule:evenodd;clip-rule:evenodd;fill:#1538E5;}
+              .st2{fill:#1538E5;}
+            </style>
+            <g>
+              <defs>
+                <rect id="SVGID_1_" x="0.3" y="0.7" width="134.2" height="23.4"/>
+              </defs>
+              <clipPath id="SVGID_2_">
+                <use xlink:href="#SVGID_1_"  style="overflow:visible;"/>
+              </clipPath>
+              <g class="st0">
+                <path class="st1" d="M0.3,23.9V1h9.4c4.9,0,7.7,3,7.7,7.2c0,4.2-2.8,7.2-7.7,7.2H5.3v8.4H0.3z M5.3,11.3h4.2
+                  c2.3,0,3.3-1.5,3.3-3.1c0-1.7-1-3.1-3.3-3.1H5.3V11.3z"/>
+                <path class="st1" d="M16.7,15.6c0-4.9,3.6-8.5,8.7-8.5c5.1,0,8.7,3.6,8.7,8.5c0,4.9-3.6,8.5-8.7,8.5
+                  C20.3,24.1,16.7,20.5,16.7,15.6z M29.5,15.6c0-2.7-1.7-4.6-4.1-4.6c-2.5,0-4.1,1.9-4.1,4.6c0,2.7,1.7,4.6,4.1,4.6
+                  C27.9,20.2,29.5,18.3,29.5,15.6z"/>
+                <path class="st2" d="M34.3,18.3h3.9c0.2,1.5,1.3,2.4,3,2.4c1.4,0,2.4-0.7,2.4-1.6c0-3.4-8.9-0.1-8.9-7c0-2.9,2.5-5,5.9-5
+                  c4,0,6.6,2.1,6.8,5.4h-4c-0.2-1.4-1.5-2.2-2.7-2.2c-1.3,0-2.2,0.6-2.2,1.6c0,3.4,9-0.5,9,7c0,3.1-2.6,5.2-6.4,5.2
+                  C37.2,24.1,34.5,21.9,34.3,18.3L34.3,18.3z"/>
+                <path class="st2" d="M50.9,2.5h4.5v4.9h4.4v3.8h-4.4v6.2c0,1.6,0.9,2.4,2.3,2.4h2.1v4.1h-2.7c-3.8,0-6.2-2.2-6.2-6v-6.7h-3.2V7.4
+                  h3.2V2.5z"/>
+                <path class="st2" d="M60.5,12.4c0-7.7,5.4-11.7,11.5-11.7c5.8,0,10,3.3,10.6,8.2h-5.1c-0.3-2.4-2.6-4-5.5-4
+                  c-3.7,0-6.5,2.6-6.5,7.5c0,4.9,2.8,7.5,6.5,7.5c2.9,0,5.2-1.6,5.6-4h4.9c-0.4,4.9-4.6,8.2-10.5,8.2C65.8,24.1,60.5,20.1,60.5,12.4
+                  z"/>
+                <path class="st2" d="M99.2,7.4v16.5h-4.6v-2.3c-0.9,1.6-2.7,2.6-5,2.6c-3.7,0-6.1-2.7-6.1-6.5V7.4h4.5v9.3c0,2,1.3,3.4,3.2,3.4
+                  c2,0,3.4-1.6,3.4-3.7v-9H99.2z"/>
+                <path class="st1" d="M134.5,18.3c-0.7,3.6-3.8,5.9-7.9,5.9c-5.6,0-8.5-4.4-8.5-8.5c0-4.2,2.6-8.5,8.1-8.5c5.8,0,8.1,4.3,8.1,8
+                  c0,0.6,0,1.1-0.1,1.5h-11.8c0.3,2.3,1.8,3.8,4.1,3.8c1.8,0,3-0.7,3.4-2.1H134.5z M122.7,13.8h7.3c-0.1-1.8-1.4-3.3-3.6-3.3
+                  C124.3,10.5,123,11.5,122.7,13.8z"/>
+                <path class="st1" d="M109.9,7.1c-2.1,0-3.7,0.8-4.6,2V1.4h-4.5v22.4h4.5v-1.8c0.9,1.3,2.6,2.1,4.5,2.1c4.9,0,7.8-3.4,7.8-8.5
+                  C117.6,10.5,114.7,7.1,109.9,7.1L109.9,7.1z M109.1,20.2c-2.5,0-4.1-1.8-4.1-4.6c0-2.8,1.6-4.6,4.1-4.6c2.4,0,4,1.8,4,4.6
+                  C113.1,18.4,111.5,20.2,109.1,20.2z"/>
+              </g>
+            </g>
+          </svg>
+        </a>
       </div>
       <div
         class="hamburger mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-5-tablet">
@@ -204,9 +245,10 @@
     var prevScrollpos = window.pageYOffset;
     window.onscroll = function () {
       var currentScrollPos = window.pageYOffset;
+      if(window.innerWidth < 1024) return;
       if (prevScrollpos > currentScrollPos && currentScrollPos < HEADER_HEIGHT) {
         document.getElementById("logo--blue").style.top = "0";
-      } else {
+      } else  {
         document.getElementById("logo--blue").style.top = "-300px";
       }
       prevScrollpos = currentScrollPos;
