[postcube] Added srcset for dpr

--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -87,7 +87,12 @@
       <div class="mdc-layout-grid__inner layout-wrapper">
         <div
           class="main-info__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-          <img alt="Fotka PostCube Kurýra" src="{{ deliveryman | cloudinaryUrl(dpr="auto", width=860) }}" width="860"
+          <img alt="Fotka PostCube Kurýra"
+               src="{{ deliveryman | cloudinaryUrl(dpr="auto", width=860) }}"
+               srcset="{{ deliveryman | cloudinaryUrl(dpr="1", width=860) }} 1x,
+                       {{ deliveryman | cloudinaryUrl(dpr="1.5", width=860) }} 1.5x,
+                       {{ deliveryman | cloudinaryUrl(dpr="2", width=860) }} 2x"
+               width="860"
                height="581">
         </div>
         <div
