PostCube - Testimonials: oprava uvozovek

--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -194,12 +194,7 @@
         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
              x="0px" y="0px"
              viewBox="0 0 71 46" style="enable-background:new 0 0 71 46;" xml:space="preserve">
-<style type="text/css">
-  .st0 {
-    fill: #1538E5;
-  }
-</style>
-          <path class="st0" d="M0.9,28.8v16.9h8.7c13.7,0,22.9-9.7,22.9-23.8V0h-21v19.7c0,5.4-2.9,9.1-7.5,9.1H0.9z M38.5,28.8v16.9H47
+          <path d="M0.9,28.8v16.9h8.7c13.7,0,22.9-9.7,22.9-23.8V0h-21v19.7c0,5.4-2.9,9.1-7.5,9.1H0.9z M38.5,28.8v16.9H47
 	c13.8,0,23.1-9.7,23.1-23.8V0h-21v19.7c0,5.4-3,9.1-7.5,9.1H38.5z"/>
 </svg>
         <h2>Zásilku vám doručíme v&nbsp;rozmezí 8&ndash;18 hodin.</h2>
@@ -210,12 +205,7 @@
         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
              x="0px" y="0px"
              viewBox="0 0 71 46" style="enable-background:new 0 0 71 46;" xml:space="preserve">
-<style type="text/css">
-  .st0 {
-    fill: #1538E5;
-  }
-</style>
-          <path class="st0" d="M0.9,28.8v16.9h8.7c13.7,0,22.9-9.7,22.9-23.8V0h-21v19.7c0,5.4-2.9,9.1-7.5,9.1H0.9z M38.5,28.8v16.9H47
+          <path d="M0.9,28.8v16.9h8.7c13.7,0,22.9-9.7,22.9-23.8V0h-21v19.7c0,5.4-2.9,9.1-7.5,9.1H0.9z M38.5,28.8v16.9H47
 	c13.8,0,23.1-9.7,23.1-23.8V0h-21v19.7c0,5.4-3,9.1-7.5,9.1H38.5z"/>
 </svg>
         <h2>Pokus o&nbsp;doručení nebyl úspěšný. Zásilku si vyzvedněte na
