PostCube - Line height pro fotky na stránkách

--- a/postcube.cz/src/stylesheets/main.scss
+++ b/postcube.cz/src/stylesheets/main.scss
@@ -38,6 +38,11 @@ textarea:focus, button:focus, input:focus {
   }
 }
 
+.guarantee__bg {
+  line-height: 0;
+  display: flex;
+}
+
 // Main Introduction Text //
 .main-info {
   color: var(--postcube-primary);
